--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-{ "name": "dangeo-mystic", "dependencies": { "next": "14.0.0", "react": "18.2.0", "tailwindcss": "^3.0.0" } }
+{
+    "name": "dangeo-mystic",
+    "version": "1.0.0",
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start"
+    },
+    "dependencies": {
+      "next": "14.0.0",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+    }
+  }
+  
