--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dangeo-mystic1.0",
   "version": "1.0.0",
@@ -14,5 +13,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "typescript": "^5.8.2"
   }
 }
