--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dangeo-mystic1.0",
   "version": "1.0.0",
@@ -16,8 +15,8 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/react": "^18.2.21",
-    "@types/node": "^20.6.3"
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "typescript": "^5.8.2"
   }
 }
