--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dangeo-mystic1.0",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "npx next build",
+  "start": "npx next start"
+},
   "dependencies": {
     "autoprefixer": "^10.4.12",
     "next": "14.0.0",
