--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "dangeo-mystic1.0",
   "version": "1.0.0",
- "scripts": {
-  "dev": "next dev",
-  "build": "npx next build",
-  "start": "npx next start"
-},
+  "scripts": {
+    "dev": "next dev",
+    "build": "npx next build",
+    "start": "npx next start"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.12",
-    "next": "14.0.0",
+    "next": "^14.0.0",
     "postcss": "^8.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
